--- a/vital-tracker/Cargo.toml
+++ b/vital-tracker/Cargo.toml
@@ -3,4 +3,14 @@ name = "vital-tracker"
 version = "0.1.0"
 edition = "2021"
 
+
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
+anyhow = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+axum = { version = "0.6", features = ["multipart"] }
+uuid = { version = "1", features = ["v4"] }
+image = "0.24"
+serde = { version = "1.0", features = ["derive"] }
+tower-http = { version = "0.3", features = ["fs"] }
