Frontend MVP functionality implemented
- Created scripts and AHK for booting backend server and using F9 hotkey to open frontend
- Created frontend form for taking photos and input to send to server
- Created frontend dashboard for graph, table, and photo gallery view
- Still need to look into implementing continual heartrate monitor with watch and reminder to record data

--- a/vital-tracker/Cargo.toml
+++ b/vital-tracker/Cargo.toml
@@ -14,3 +14,4 @@ uuid = { version = "1", features = ["v4"] }
 image = "0.24"
 serde = { version = "1.0", features = ["derive"] }
 tower-http = { version = "0.3", features = ["fs"] }
+serde_json = "1.0"
