--- a/vital-tracker/Cargo.toml
+++ b/vital-tracker/Cargo.toml
@@ -15,3 +15,4 @@ image = "0.24"
 serde = { version = "1.0", features = ["derive"] }
 tower-http = { version = "0.3", features = ["fs"] }
 serde_json = "1.0"
+dotenvy = "0.15"
